[package]
name = "macros-demo"
version = "0.1.0"
authors = ["mazi <602281666@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macro_define_crate = { path = "./macro_define_crate" }
hello_macro = { path = "./hello_macro" }
hello_macro_derive = { path = "./hello_macro/hello_macro_derive" }
