[package]
name = "macro_define_crate"
version = "0.1.0"
authors = ["mazi <602281666@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.7"
quote = "1"
syn = { version = "1.0.56", features = ["full"] }

[lib]
proc-macro = true
